MDEV-8806 Numeric CAST produce different warnings for strings literals vs functions